Add navigation size change on scroll

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="nav"> 
+<div class="nav" [@navHeight]="stateNavigation"> 
     <div *ngIf="this.deviceWidth > 960" class="nav-xl">
         <div class="height left">
             <div class="favicon flex">
