--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,6 +7,12 @@ $color-dark: black;
 
 /* MIXINS */
 
+@mixin pb-bow-shadow-size($h, $v, $blur, $spread, $r, $g, $b, $a) {
+    -webkit-box-shadow: $h $v $blur $spread rgba($r,$g,$b,$a);
+    -moz-box-shadow: $h $v $blur $spread rgba($r,$g,$b,$a);
+    box-shadow: $h $v $blur $spread rgba($r,$g,$b,$a);
+} 
+
 @mixin pb-icon-size($size) {
     font-size: $size;
     height: $size;
@@ -18,13 +24,6 @@ $color-dark: black;
     -moz-transition: $element $time $animation; 
     -webkit-transition: $element $time $animation; 
 }
-
-@mixin bow-shadow-size($r, $g, $b, $a) {
-    -webkit-box-shadow: 0px 2px 10px 0px rgba($r,$g,$b,$a);
-    -moz-box-shadow: 0px 2px 10px 0px rgba($r,$g,$b,$a);
-    box-shadow: 0px 2px 10px 0px rgba($r,$g,$b,$a);
- }
-
 
 /* GENERAL */
 
@@ -77,9 +76,7 @@ button {
     display: flex;    
     align-items: center;
     justify-content: center;
-    -webkit-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.033);
-    -moz-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.033);
-    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.033);
+    @include pb-bow-shadow-size(0px, 2px, 10px, 0px, 0, 0, 0, 0.033);
     @include pb-transition(height, 0.25, ease-in-out);
 }
 
