--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,15 +17,20 @@ $color-dark: black;
     font-size: $size;
     height: $size;
     width: $size;
-}
+} 
 
 @mixin pb-transition($element, $time, $animation) {
     transition: $element $time $animation; 
     -moz-transition: $element $time $animation; 
     -webkit-transition: $element $time $animation; 
-}
+} 
+
 
 /* GENERAL */
+
+body {
+    text-align: center;
+}
 
 .left {
     float: left;
@@ -35,271 +40,312 @@ $color-dark: black;
     float: right;
 }
 
-.center {
-    text-align: center;
-}
-
-.height {
-    height: 100%;
-}
-
-.flex { 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-  
 .mat-icon {
     @include pb-icon-size(28px);
     background-color: transparent;
     color: $color-dark;
-}
-
-button {
-    background-color: Transparent;
-    background-repeat: no-repeat;
-    border: none;
-}
+ }
 
 
-/* NAVIGATION */
+/* GRID */
 
-.nav {    
-    z-index: 700;
-    top: 0;
-    left: 0;
-    position: fixed;
-    width: 100%;
-    height: 50px;
-    background-color: $color-light;
-    display: flex;    
-    align-items: center;
+.grid {
+    display: grid;
+    width: 100%;        
+    margin-top: 60px;
     justify-content: center;
-    @include pb-bow-shadow-size(0px, 2px, 10px, 0px, 0, 0, 0, 0.033);
-    @include pb-transition(height, 0.25, ease-in-out);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: (200px, 1fr);
+    grid-auto-flow: dense;
+    grid-gap: 15px;
+    margin-left: auto;
+    margin-right: auto;      
+    button {
+        background-color: Transparent;
+        background-repeat: no-repeat;
+        border: none !important;
+        font-size: 0;
+    }  
 }
 
-.nav-xl {
-    width: 960px;
+.grid .span-1 {
+    grid-row-end: span 1;
+    font-size: 0;
+    position: relative;
+}
+
+.grid .span-1 .overlay {
+    opacity: 1;
+    position: absolute;
+    top: 12px;
+    left: 12px;
     height: 100%;
-    color: $color-dark;     
-    input {
-        min-width: 450px;
-        height: 24px;
-        background: transparent;
-        border: 1px solid rgba(0,0,0,0.33);
-        border-radius:5px;
-        text-align: center;
-    };   
-    input:focus { 
-        outline: none !important;
-    }    
-    button:focus { 
-        outline: none !important;
-    }    
-    mat-icon {
-        padding: 13px;
-        @include pb-transition(color, 0.25s, ease-in-out);
-        @include pb-transition(background-color, 0.25s, ease-in-out);
-    }
-    mat-icon:hover {
-        color: $color-light;
-        background-color: $color-primary;
-        cursor: pointer;
-    }
-}
-
-.nav-xl .favicon {
-    mat-icon {
-        background-color: $color-primary;
-        color: $color-light;
-        padding: 8px;
-        margin-left: 13px;
-        @include pb-transition(color, 0.25s, ease-in-out);
-        @include pb-transition(background-color, 0.25s, ease-in-out);
-        border: 0px;
-        border-radius: 24px;
-    }
-    mat-icon:hover {
-        background-color: $color-dark;
-        color: $color-light;
-        cursor: pointer;
-    }
-}
-
-.nav-xl .title {
-    /* background-color: $color-primary;
-    color: white; */
-    font-size: 24px;
-    font-weight: 100;
-    letter-spacing: 1px; 
-    padding: 11px 16px 11px 16px;
-}
-
-.nav-xl .search {
-    margin-right: 16px;
-}
-
-.nav-xl .link {
-    padding: 16px 13px 16px 13px;
-    /* padding-left: 0.5em !important;
-    padding-right: 0.5em !important; */
-    display: block;    
-    @include pb-transition(background-color, 0.25s, ease-in-out);
-    a {
-        color: $color-dark;
-        text-decoration: none;
-        @include pb-transition(color, 0.25s, ease-in-out);
-    }   
-    a:hover {
-        color: $color-light;
-    }
-}
-
-.nav-xl .link:hover {
-    background-color: $color-primary;
-    a {
-        color: $color-light;
-    }    
-}
-
-
-/* NAVIGATION SMALL DEVICES */
-
-.nav-sm {
     width: 100%;
+}
+
+.grid .span-2 {
+    grid-row-end: span 2;
+    width: 100%;
+    font-size: 0;
+    position: relative;
+}   
+
+.grid .span-2 .overlay {
+    opacity: 1;
+    position: absolute;
+    top: 12px;
+    left: 12px;
     height: 100%;
-    color: $color-dark;     
-    input {
-        height: 60%;
-        width: 100%;
-        margin: 0px 8px 0px 8px;
-        background: transparent;
-        border: 1px solid rgba(0,0,0,0.33);
-        border-radius: 12px;
-        /* -ms-input-placeholder: { text-align: center };
-        -moz-placeholder: { text-align: center };
-        -webkit-input-placeholder: { text-align: center }; */
-        text-align: center;
-    }
-    input:focus { 
-        outline: none !important;
-    }
-    mat-icon {
-        @include pb-transition(color, 0.25s, ease-in-out);
-        @include pb-transition(background-color, 0.25s, ease-in-out);
-        @include pb-icon-size(28px);
-        padding: 11px;
-    }
-    mat-icon:hover {
-        color: $color-light;
-        background-color: $color-primary;
-        cursor: pointer;
-    }
+    width: 100%;
 }
 
-.nav-sm .favicon {
-    mat-icon {
-        background-color: $color-primary;
-        color: $color-light;
-        padding: 4px;
-        margin-left: 8px;
-        @include pb-icon-size(24px);
-        @include pb-transition(color, 0.25s, ease-in-out);
-        @include pb-transition(background-color, 0.25s, ease-in-out);
-        border: 0px;
-        border-radius: 24px;
-    }
-    mat-icon:hover {
-        background-color: black;
-        color: $color-light;
-        cursor: pointer;
-    }
-}
-
-.nav-sm .title {
-    font-size: 24px;
-    font-weight: 100;
-    /* letter-spacing: 1px;  */
-    padding-left: 20px;
-}
-
-.nav-sm .search {
+.grid .landscape {
     width: 100%; 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px; 
 }
 
-.nav-sm .menu {
-    top: 0;
-    left: 0;
+.grid .portrait {
     width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 500;
-    background-color: rgba(0,0,0,0.9);
+    max-height: 100%;
 }
 
-.nav-sm .menu-top {
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: 50px;
-    border-bottom: 1px solid $color-light;
+.grid .icon {
+    transition: opacity 0.25s;
+    background-color: rgba(255,255,255,0.75);
+    font-size: 0;
+    padding: 8px;  
+    @include pb-transition(background-color, 0.25s, ease-in-out);
     mat-icon {
+        color: $color-dark;
         @include pb-transition(color, 0.25s, ease-in-out);
-        @include pb-transition(background-color, 0.25s, ease-in-out);
-        @include pb-icon-size(28px);
-        padding: 11px;
-        color: $color-light;
-        background-color: $color-dark;
-    }
+    };
     mat-icon:hover {
-        color: $color-light;
-        background-color: $color-primary;
-        cursor: pointer;
+        cursor: pointer;        
     }
 }
 
-.nav-sm .menu-content {
-    color: $color-light;
-    text-align: center;    
-    margin-top: 70px;
-    a {
-        font-size: 24px;
-        text-decoration: none;
-        color: $color-primary;
+.grid .icon:hover {
+    background-color: $color-primary;
+    mat-icon {
+        color: $color-light;            
+    };
+    mat-icon:hover {
+        cursor: pointer;    
     }
-}
+}    
 
 
 /* BIG SCREENS */
 
 @media screen and(min-width: 960px) {
-    .nav {
-        height: 70px;
-        /* @include pb-transition(height, 0.25, ease-in-out); */
-        transition: height 0.25; 
-        -webkit-transition: height 0.25; 
-    } 
-
-    .title {
-        font-size: 28px;
-        font-weight: 500;
-        letter-spacing: 2px;
+    .grid {
+        display: grid;
+        max-width: 960px;        
+        margin-top: 90px;
+        justify-content: center;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        grid-auto-rows: (200px, 1fr);
+        grid-auto-flow: dense;
+        grid-gap: 20px;
+        margin-left: auto;
+        margin-right: auto;        
     }
 
-    .mat-icon {
-        @include pb-icon-size(24px);
-        background-color: transparent;
-        color: $color-dark;
-     }
+    .grid .span-1 .overlay {
+        opacity: 0;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;  
+        top: 0;
+        left: 0;  
+        height: 100%;
+        width: 100%;
+        transition: opacity 0.25s;
+        background-color: rgba(0,0,0,0.5);
+    }
+    
+    .grid .span-1:hover .overlay {
+        opacity: 1;    
+        transition: opacity 0.25s;
+    }    
 
-     .flex-2 {
-         flex-grow: 2;
-     }
+    .grid .span-2 .overlay {
+        opacity: 0;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;    
+        top: 0;
+        left: 0; 
+        height: 100%;
+        width: 100%;
+        transition: opacity 0.25s;
+        background-color: rgba(0,0,0,0.5);
+    }
+
+    .grid .span-2:hover .overlay {
+        opacity: 1;    
+        transition: opacity 0.25s;
+    }
+}
+
+
+/* MODAL */ 
+
+.modal {        
+    /* opacity: 0; */
+    position: fixed;
+    z-index: 800;
+    padding-top: 75px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /* overflow: auto; */
+    background-color: rgba(0,0,0,0.5);
+
+}
+
+.modal .content {
+    background-color: #fefefe;
+    max-width: 1050px;
+    margin: auto;
+    padding: 10px 20px 20px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    flex-flow: column wrap;
+    transition: width 0.25s ease-in-out;
+    -webkit-transition: width 0.25s ease-in-out;
+}
+
+.modal .content .nav {
+    width: 100%;
+    mat-icon {
+        margin: 4px;
+        color: $color-dark;
+        transition: color 0.25s ease-in-out;
+        -webkit-transition: color 0.25s ease-in-out;
+    }
+    mat-icon:hover {
+        color: $color-primary;
+        cursor: pointer;
+    }
+}
+
+.modal .content .nav .icon {
+    font-size: 0;
+}
+
+.modal .content .container {
+    position: relative;
+}
+
+.modal .content .container .overlay {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    font-size: 0;
+    transform: translateY(-50%);
+    @include pb-transition(opacity, 0.25s, ease-in-out);   
+    mat-icon {
+        color: $color-dark;
+        @include pb-transition(color, 0.25s, ease-in-out);   
+    };
+    mat-icon:hover {
+        color: $color-light;
+        /* background-color: $color-primary; */
+        cursor: pointer;        
+    }
+}
+
+.modal .content .container:hover .overlay {
+    opacity: 1; 
+    font-size: 0;
+}
+
+.modal .content .container .overlay .icon {
+    background-color: rgba(255,255,255,0.75);
+    border: 0px;
+    border-radius: 50px;
+    margin: 4px;
+    @include pb-transition(background-color, 0.25s, ease-in-out);    
+}
+
+.modal .content .container .overlay .icon:hover {
+    background-color: $color-primary;
+    border: 0px;
+    border-radius: 50px;
+    margin: 4px;
+}
+
+.modal .content .container .overlayTags {
+    opacity: 0;
+    position: absolute;
+    max-width: 100%;
+    bottom: 20px;
+    right: 20px;    
+    @include pb-transition(opacity, 0.25s, ease-in-out);    
+}
+
+.modal .content .container:hover .overlayTags {
+    opacity: 1;    
+}
+
+.modal .content .container .overlayTags .tag {
+    background-color: rgba(255,255,255,0.75);
+    padding: 4px;
+    @include pb-transition(background-color, 0.25s, ease-in-out);    
+}
+
+.modal .content .container .overlayTags .tag:hover {    
+    background-color: $color-primary;
+    color: $color-light;
+    cursor: pointer;
+}
+
+.modal .landscape {
+    max-width: 100%;
+}
+
+.modal .portrait {
+    max-height: 600px;
+}
+
+/* FILTER */
+.filter {
+    z-index: 500;
+    background-color: rgba(255,255,255,0.75);    
+    position: fixed;
+    right: 24px;
+    bottom: 24px;   
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+    @include pb-bow-shadow-size(0px, 0px, 16px, 0px, 0, 0, 0, 0.25);
+    mat-icon {
+        padding: 8px;
+        color: $color-dark;
+        @include pb-transition(color, 0.25s, ease-in-out);   
+    };
+    mat-icon:hover {
+        color: $color-light;
+        /* background-color: $color-primary; */
+        cursor: pointer;        
+    }
+}
+
+.filter .text {
+    height: 100%;
+    padding: 0px 8px 0px 8px;
+}
+
+.filter .icon {        
+    font-size: 0;
+    @include pb-transition(background-color, 0.25s, ease-in-out);    
+}
+
+.filter .icon:hover {
+    background-color: $color-primary;
 }
