--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -71,7 +71,10 @@ body {
 .grid .span-1 {
     grid-row-end: span 1;
     font-size: 0;
-    position: relative;
+    position: relative;    
+    img {
+        object-fit: cover;
+    }
 }
 
 .grid .span-1 .overlay {
@@ -85,9 +88,12 @@ body {
 
 .grid .span-2 {
     grid-row-end: span 2;
-    width: 100%;
+    max-height: 100%;
     font-size: 0;
-    position: relative;
+    position: relative;    
+    img {
+        object-fit: cover;
+    }
 }   
 
 .grid .span-2 .overlay {
@@ -131,7 +137,7 @@ body {
     mat-icon:hover {
         cursor: pointer;    
     }
-}    
+}  
 
 
 /* BIG SCREENS */
